--- a/ansible/Jenkinsfile
+++ b/ansible/Jenkinsfile
@@ -16,11 +16,13 @@ pipeline {
     }
 
     stages {
+        stage('Checkout Code') {
+            steps {
                 script {
                     git branch: "${GITHUB_BRANCH}", credentialsId: "${GITHUB_CREDENTIAL}", url: "${GITHUB_REPO_URL}"
                 }
-            
-        
+            }
+        }
 
         stage('Copy Ansible Files') {
             steps {
