--- a/sonarqube/docker-compose.yml
+++ b/sonarqube/docker-compose.yml
@@ -1,39 +1,34 @@
 version: "3"
-
 services:
   sonarqube:
-    image: sonarqube:6.7.1
-    container_name: sonarqube
+    image: sonarqube:community
     restart: unless-stopped
+    depends_on:
+      - db
     environment:
-      - SONARQUBE_JDBC_USERNAME=sonar
-      - SONARQUBE_JDBC_PASSWORD=password123
-      - SONARQUBE_JDBC_URL=jdbc:postgresql://db:5432/sonarqube
-    ports:
-      - "9000:9000"
-      - "9092:9092"
+      SONAR_JDBC_URL: jdbc:postgresql://db:5432/sonar
+      SONAR_JDBC_USERNAME: sonar
+      SONAR_JDBC_PASSWORD: sonar
     volumes:
-      - sonarqube_conf:/opt/sonarqube/conf
       - sonarqube_data:/opt/sonarqube/data
       - sonarqube_extensions:/opt/sonarqube/extensions
-      - sonarqube_bundled-plugins:/opt/sonarqube/lib/bundled-plugins
+      - sonarqube_logs:/opt/sonarqube/logs
+    ports:
+      - "9000:9000"
 
   db:
-    image: postgres:10.1
-    container_name: db
+    image: postgres:12
     restart: unless-stopped
     environment:
-      - POSTGRES_USER=sonar
-      - POSTGRES_PASSWORD=password123
-      - POSTGRES_DB=sonarqube
+      POSTGRES_USER: sonar
+      POSTGRES_PASSWORD: sonar
     volumes:
-      - sonarqube_db:/var/lib/postgresql10
-      - postgresql_data:/var/lib/postgresql10/data
+      - postgresql:/var/lib/postgresql
+      - postgresql_data:/var/lib/postgresql/data
 
 volumes:
-  postgresql_data:
-  sonarqube_bundled-plugins:
-  sonarqube_conf:
   sonarqube_data:
-  sonarqube_db:
   sonarqube_extensions:
+  sonarqube_logs:
+  postgresql:
+  postgresql_data:
