--- a/continuous-integration-continuous-deployment/Jenkinsfile
+++ b/continuous-integration-continuous-deployment/Jenkinsfile
@@ -150,7 +150,7 @@ services:
 
 
                     sshPublisher(publishers: [sshPublisherDesc(
-                        configName: 'microserviceserver',
+                        configName: env.MICROSERVICE_SERVER,
                         transfers: [sshTransfer(
                             cleanRemote: false,
                             execCommand: deployCommand,
@@ -183,7 +183,7 @@ services:
             '''
 
             sshPublisher(publishers: [sshPublisherDesc(
-                configName: 'monolithicserver',
+                configName: env.MONOLITHIC_SERVER,
                 transfers: [sshTransfer(
                     sourceFiles: 'target/blog-0.0.1-SNAPSHOT.jar',
                     removePrefix: 'target/',
