--- a/continuous-integration-continuous-deployment/Jenkinsfile
+++ b/continuous-integration-continuous-deployment/Jenkinsfile
@@ -130,6 +130,7 @@ pipeline {
             steps {
                 script {
                    def deployCommand = '''
+    set -ex
     mkdir -p /home/${REMOTE_USER}/deployment
     echo 'version: "3.9"
 
@@ -176,6 +177,7 @@ services:
             steps {
                 script {
                    def Command = '''
+                       set -ex
                        cd ~/blog-app/
                        kill $(/usr/sbin/lsof -t -i:8081)
                        java -jar blog-0.0.1-SNAPSHOT.jar > logfile &
