--- a/continuous-integration-continuous-deployment/Jenkinsfile
+++ b/continuous-integration-continuous-deployment/Jenkinsfile
@@ -179,9 +179,19 @@ services:
                    def Command = '''
                        set -ex
                        cd ~/blog-app/
-                       kill $(/usr/sbin/lsof -t -i:8081)
-                       java -jar blog-0.0.1-SNAPSHOT.jar > logfile &
-                       cat logfile
+                       # Check if any process is listening on port 8081 and kill it
+                PID=$(/usr/sbin/lsof -t -i:8081)
+                if [ -n "$PID" ]; then
+                    kill $PID
+                    echo "Killed process $PID"
+                else
+                    echo "No process found listening on port 8081"
+                fi
+
+                # Run the new jar file
+                java -jar blog-0.0.1-SNAPSHOT.jar > logfile 2>&1 &
+                echo "Started new blog application"
+                cat logfile
             '''
 
             sshPublisher(publishers: [sshPublisherDesc(
