--- a/continuous-deployment/Jenkinsfile
+++ b/continuous-deployment/Jenkinsfile
@@ -3,6 +3,7 @@ pipeline {
 
     parameters {
         choice(name: 'DEPLOYMENT_ACTION', choices: ['Monolithic_Deployment', 'Microservice_Deployment', 'All_Deployments'], description: 'Select Your Preffered Deployment Type')
+        string(name: 'SECRETS_ARN', description: 'The ARN of Your Secret In Secrets Manager. Optional If DEPLOYMENT_ACTION = Microservice_Deployment Eg : arn:aws:secretsmanager:us-east-1:710589867007:secret:nexus_login_credentials-3y25QH')
         string(name: 'DOCKER_IMAGE', description: 'Existing Docker Image To Be Deployed From Your DockerHub Registry.Optional If DEPLOYMENT_ACTION = Monolithic_Deployment  Eg: springboot-app-ci-cd:V004')
         string(name: 'CONTAINER_NAME', description: 'Your Preffered Name For Container To Be Created. Optional If DEPLOYMENT_ACTION = Monolithic_Deployment')
         string(name: 'JAR_FILE_NAME', description: 'Name Of The Existing Jar File In Nexus To be Deployed. Optional If DEPLOYMENT_ACTION = Microservice_Deployment Eg : blog-0.0.1-20240606.064611-3.jar')
@@ -22,6 +23,7 @@ pipeline {
         JAR_FILE_NAME = "${params.JAR_FILE_NAME}"
         MICROSERVICE_SERVER = "${params.MICROSERVICE_SERVER}"
         MONOLITHIC_SERVER = "${params.MONOLITHIC_SERVER}"
+        SECRETS_ARN = "${params.SECRETS_ARN}"
     }
 
     stages {
@@ -105,11 +107,11 @@ services:
                 else
                     echo "No process found listening on port 8081"
                 fi
-                # Export Variables To Retrieve Secrets from Secrets Manager
-                export ARN="arn:aws:secretsmanager:us-east-1:710589867007:secret:nexus_login_credentials-3y25QH"
+                 # Export Variables To Retrieve Secrets from Secrets Manager
+                export ARN="${SECRETS_ARN}"
                 secret=$(aws secretsmanager get-secret-value --secret-id $ARN --query "SecretString" --output=text)
-                export NEXUS_USERNAME=$(echo $secret | sed -n 's|.*"NEXUS_USERNAME":"\([^"]*\)".*|\1|p')
-                export NEXUS_PASSWORD=$(echo $secret | sed -n 's|.*"NEXUS_PASSWORD":"\([^"]*\)".*|\1|p')
+                export NEXUS_USERNAME=$(echo $secret | sed -n "s|.*\\\"NEXUS_USERNAME\\\":\\\"\\([^\\\"]*\\)\\\".*|\\1|p")
+                export NEXUS_PASSWORD=$(echo $secret | sed -n "s|.*\\\"NEXUS_PASSWORD\\\":\\\"\\([^\\\"]*\\)\\\".*|\\1|p")
                 
                 # Download And Run Desired Jar file
                 curl -u "${NEXUS_USERNAME}":"${NEXUS_PASSWORD}" -O "${NEXU_JAR_FILE_URL}"
