--- a/continuous-deployment/Jenkinsfile
+++ b/continuous-deployment/Jenkinsfile
@@ -145,6 +145,11 @@ services:
     }
 }
 
-
+  post {
+        failure {
+            echo "Pipeline failed due to errors."
+            currentBuild.result = 'FAILED'
+        }
+    }
     }
 }
