--- a/continuous-deployment/Jenkinsfile
+++ b/continuous-deployment/Jenkinsfile
@@ -1,5 +1,8 @@
 pipeline {
     agent any
+    options {
+        timeout(time: 10, unit: 'MINUTES')
+    }
 
     parameters {
         choice(name: 'DEPLOYMENT_ACTION', choices: ['', 'Monolithic_Deployment', 'Microservice_Deployment', 'All_Deployments'], description: 'Select Your Preffered Deployment Type')
