--- a/continuous-integration-continuous-delivery/Jenkinsfile
+++ b/continuous-integration-continuous-delivery/Jenkinsfile
@@ -1,5 +1,8 @@
 pipeline { 
     agent any
+    options {
+        timeout(time: 10, unit: 'MINUTES')
+    }
 
     parameters {
         string(name: 'IMAGE_TAG', defaultValue: "${BUILD_ID}", description: 'Docker image tag')
