--- a/terraform/Jenkinsfile
+++ b/terraform/Jenkinsfile
@@ -1,5 +1,8 @@
 pipeline {
     agent any
+    options {
+        timeout(time: 10, unit: 'MINUTES')
+    }
 
     parameters {
         string(name: 'GITHUB_CREDENTIAL', defaultValue: 'github_creds', description: 'Github access credentials id')
