--- a/continuous-integration/Jenkinsfile
+++ b/continuous-integration/Jenkinsfile
@@ -45,6 +45,7 @@ pipeline {
         
         stage('Application Build And Test') {
             steps {
+                sh 'chmod +x ./mvnw'
                 sh './mvnw clean install'
                 sh './mvnw test'
             }
