--- a/ansible/packages2.yml
+++ b/ansible/packages2.yml
@@ -40,3 +40,9 @@
       yum:
         name: docker
         state: present
+
+    - name: Start Docker service
+      systemd:
+        name: docker
+        state: started
+        enabled: yes   
