--- a/continuous-integration/Jenkinsfile
+++ b/continuous-integration/Jenkinsfile
@@ -64,4 +64,19 @@ pipeline {
         
 
     }
+    post {
+        success {
+            emailext body: "Build ${currentBuild.fullDisplayName} succeeded",
+                     subject: "${env.JOB_NAME} - Build #${env.BUILD_NUMBER} - Successful",
+                     to: 'stunnerzroby@gmail.com',
+                     attachLog: true
+        }
+        failure {
+            emailext body: "Build ${currentBuild.fullDisplayName} failed",
+                     subject: "${env.JOB_NAME} - Build #${env.BUILD_NUMBER} - Failed",
+                     to: 'stunnerzroby@gmail.com',
+                     attachLog: true
+        }
+        
+    }
 }
